# giganotes-core-js

./: README.md  package.json
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
